fix input clipping in forms

--- a/website/public/css/default.css
+++ b/website/public/css/default.css
@@ -204,8 +204,7 @@ hr {
 .form-control {
     display: block;
     width: 100%;
-    height: 50px;
-    line-height: 1.6;
+    height: 65px;
     padding: 6px 12px;
     font-size: 40px;
     font-weight: 700;
