--- a/website/public/css/simple-sidebar.css
+++ b/website/public/css/simple-sidebar.css
@@ -19,7 +19,7 @@
 }
 
 #wrapper.toggled {
-    padding-left: 150px;
+    padding-left: 50px;
 }
 
 #sidebar-wrapper {
